Updating configurations for Railway